--- a/app/src/main/res/layout/activity_fitness_tracker.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_fitness_tracker"
     android:layout_width="match_parent"
@@ -19,4 +20,69 @@
         android:layout_marginTop="64dp"
         android:id="@+id/textView4"
         android:textSize="36sp" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:text="Weekly Goal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:text="Weekly Goal 1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/weeklyGoal1" />
+
+        <TextView
+            android:text="Daily Goal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:text="Daily Goal 1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/dailyGoal1"
+            android:onClick="goal1Checked"
+            android:checked="false"
+            android:textColorLink="?attr/colorAccent" />
+
+        <CheckBox
+            android:text="Daily Goal 2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/dailyGoal2" />
+
+        <TextView
+            android:text="Your Goals"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:text="Your Goal 1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox4"
+            android:textSize="14sp" />
+
+        <CheckBox
+            android:text="Your Goal 2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox5" />
+
+    </LinearLayout>
 </RelativeLayout>
