--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_meal_plan"
@@ -11,6 +13,7 @@
     tools:context="com.example.alex.fitbytes.MealPlan">
 
     <TextView
+        android:id="@+id/textView"
         android:text="Meal Planner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +23,104 @@
         android:layout_marginLeft="56dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="28dp"
-        android:id="@+id/textView"
         android:textSize="36sp" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="52dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textView8"
+                android:text="Month"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="13dp"
+                android:layout_above="@+id/daySpinner"
+                android:layout_alignRight="@+id/daySpinner"
+                android:layout_alignEnd="@+id/daySpinner" />
+
+            <TextView
+                android:id="@+id/dayText"
+                android:text="Day"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView8"
+                android:layout_alignBottom="@+id/textView8"
+                android:layout_alignRight="@+id/monthSpinner"
+                android:layout_alignEnd="@+id/monthSpinner" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Spinner
+                android:id="@+id/monthSpinner"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:spinnerMode="dropdown"
+                android:layout_below="@+id/textView"
+                android:layout_centerHorizontal="true" />
+
+            <Spinner
+                android:id="@+id/daySpinner"
+                android:layout_width="75dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_alignTop="@+id/monthSpinner" />
+
+            <Button
+                android:id="@+id/submitMeal"
+                android:text="+ add"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@+id/tableLayout"
+                android:layout_toRightOf="@+id/textView"
+                android:layout_toEndOf="@+id/textView" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/UpcomingPlans"
+                android:text="Upcoming Plans"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/tableLayout"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+        </TableRow>
+
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ListView
+                android:id="@+id/plannedMeals"
+                android:textSize="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+    </TableLayout>
+
 </RelativeLayout>
