Can now add dates to the list of upcoming plans.

--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -84,7 +84,7 @@
                 android:layout_alignTop="@+id/monthSpinner" />
 
             <Button
-                android:id="@+id/submitMeal"
+                android:id="@+id/addMeal"
                 android:text="+ add"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
