--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,6 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
-</LinearLayout>
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/userProfileBMI"
+        android:layout_alignLeft="@+id/userProfileUserWeight"
+        android:layout_alignStart="@+id/userProfileUserWeight"
+        android:id="@+id/userProfileUserBMI"
+        android:textSize="30sp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="98dp"
+        android:id="@+id/userProfileIsBMIhealthy"
+        android:textSize="30sp"
+        android:layout_below="@+id/userProfileUserBMI"
+        android:layout_toRightOf="@+id/userProfileBMI"
+        android:layout_toEndOf="@+id/userProfileBMI"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp" />
+
+    <TextView
+        android:text="Weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="69dp"
+        android:id="@+id/userProfileWeight"
+        android:textSize="30sp"
+        android:layout_below="@+id/userProfileHeight"
+        android:layout_alignLeft="@+id/userProfileHeight"
+        android:layout_alignStart="@+id/userProfileHeight" />
+
+    <TextView
+        android:text="Height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:id="@+id/userProfileHeight"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="11dp" />
+
+    <TextView
+        android:text="BMI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="71dp"
+        android:id="@+id/userProfileBMI"
+        android:textSize="30sp"
+        android:layout_below="@+id/userProfileWeight"
+        android:layout_alignLeft="@+id/userProfileWeight"
+        android:layout_alignStart="@+id/userProfileWeight"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_above="@+id/userProfileWeight"
+        android:layout_toRightOf="@+id/userProfileWeight"
+        android:layout_toEndOf="@+id/userProfileWeight"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
+        android:id="@+id/userProfileUserHeight"
+        android:editable="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_alignTop="@+id/userProfileWeight"
+        android:layout_alignLeft="@+id/userProfileUserHeight"
+        android:layout_alignStart="@+id/userProfileUserHeight"
+        android:id="@+id/userProfileUserWeight" />
+
+</RelativeLayout>
