--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -64,4 +64,15 @@
         android:layout_alignRight="@+id/button3"
         android:layout_alignEnd="@+id/button3"
         android:onClick="recipeButtonOnClick"/>
+
+    <Button
+        android:text="UserProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button4"
+        android:layout_alignRight="@+id/button4"
+        android:layout_alignEnd="@+id/button4"
+        android:layout_marginBottom="26dp"
+        android:id="@+id/contentMainUserProfileButton"
+        android:onClick="userProfileButtonOnClick" />
 </RelativeLayout>
