--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -37,34 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <TextView
-                android:id="@+id/textView8"
-                android:text="Month"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="13dp"
-                android:layout_above="@+id/daySpinner"
-                android:layout_alignRight="@+id/daySpinner"
-                android:layout_alignEnd="@+id/daySpinner" />
-
-            <TextView
-                android:id="@+id/dayText"
-                android:text="Day"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView8"
-                android:layout_alignBottom="@+id/textView8"
-                android:layout_alignRight="@+id/monthSpinner"
-                android:layout_alignEnd="@+id/monthSpinner" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
             <Spinner
                 android:id="@+id/monthSpinner"
                 android:layout_width="100dp"
@@ -83,6 +55,21 @@
                 android:layout_marginEnd="30dp"
                 android:layout_alignTop="@+id/monthSpinner" />
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Spinner
+                android:id="@+id/recipeSpinner"
+                android:layout_width="100dp"
+                android:layout_height="match_parent" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
             <Button
                 android:id="@+id/addMeal"
                 android:text="+ add"
@@ -91,7 +78,6 @@
                 android:layout_alignTop="@+id/tableLayout"
                 android:layout_toRightOf="@+id/textView"
                 android:layout_toEndOf="@+id/textView" />
-
         </TableRow>
 
         <TableRow
@@ -109,13 +95,19 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
-        </TableRow>
+        </TableRow><![CDATA[
+
+
 
 
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <ListView
+
+
+        ]]>
+
+        <ListView
                 android:id="@+id/plannedMeals"
                 android:textSize="12dp"
                 android:layout_width="match_parent"
