--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -55,6 +55,15 @@
                 android:layout_marginEnd="30dp"
                 android:layout_alignTop="@+id/monthSpinner" />
 
+            <Button
+                android:id="@+id/addMeal"
+                android:text="Done"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@+id/tableLayout"
+                android:layout_toRightOf="@+id/textView"
+                android:layout_toEndOf="@+id/textView" />
+
         </TableRow>
 
         <TableRow
@@ -71,13 +80,11 @@
                 android:layout_height="match_parent" />
 
             <Button
-                android:id="@+id/addMeal"
-                android:text="+ add"
+                android:text="Cancel"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignTop="@+id/tableLayout"
-                android:layout_toRightOf="@+id/textView"
-                android:layout_toEndOf="@+id/textView" />
+                android:layout_height="wrap_content"
+                android:id="@+id/button_cancel" />
+
         </TableRow>
 
         <TableRow
@@ -114,5 +121,18 @@
                 android:layout_height="match_parent" />
 
     </TableLayout>
+
+    <TextView
+        android:text="Editing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_editing"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="37dp"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="normal|bold" />
 
 </RelativeLayout>
