--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,62 +17,76 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FitBytes"
-        android:textSize="50sp" />
+        android:textSize="50sp"
+        android:id="@+id/textView8" />
 
-    <Button
-        android:text="Meal Planner"
+    <TextView
+        android:text="Use menu button in top right to navigate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="19dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/button"
-        android:onClick="mealPlanButtonOnClick"/>
+        android:id="@+id/textView7"
+        android:layout_below="@+id/textView8"
+        android:layout_alignRight="@+id/textView8"
+        android:layout_alignEnd="@+id/textView8"
+        android:layout_marginRight="57dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginTop="127dp"
+        android:textSize="18sp" />
 
-    <Button
-        android:text="Ingredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button"
-        android:layout_marginBottom="18dp"
-        android:id="@+id/button2"
-        android:onClick="ingredientButtonOnClick" />
+    <!--<Button-->
+        <!--android:text="Meal Planner"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginRight="19dp"-->
+        <!--android:layout_marginEnd="19dp"-->
+        <!--android:layout_marginBottom="50dp"-->
+        <!--android:id="@+id/button"-->
+        <!--android:onClick="mealPlanButtonOnClick"/>-->
 
-    <Button
-        android:text="Fitness Tracker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_alignRight="@+id/button2"
-        android:layout_alignEnd="@+id/button2"
-        android:layout_marginBottom="29dp"
-        android:id="@+id/button3"
-        android:onClick="fitnessTrackerButtonOnClick"/>
+    <!--<Button-->
+        <!--android:text="Ingredients"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/button"-->
+        <!--android:layout_alignRight="@+id/button"-->
+        <!--android:layout_alignEnd="@+id/button"-->
+        <!--android:layout_marginBottom="18dp"-->
+        <!--android:id="@+id/button2"-->
+        <!--android:onClick="ingredientButtonOnClick" />-->
 
-    <Button
-        android:text="Recipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
-        android:id="@+id/button4"
-        android:layout_above="@+id/button3"
-        android:layout_alignRight="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
-        android:onClick="recipeButtonOnClick"/>
+    <!--<Button-->
+        <!--android:text="Fitness Tracker"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/button2"-->
+        <!--android:layout_alignRight="@+id/button2"-->
+        <!--android:layout_alignEnd="@+id/button2"-->
+        <!--android:layout_marginBottom="29dp"-->
+        <!--android:id="@+id/button3"-->
+        <!--android:onClick="fitnessTrackerButtonOnClick"/>-->
 
-    <Button
-        android:text="UserProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button4"
-        android:layout_alignRight="@+id/button4"
-        android:layout_alignEnd="@+id/button4"
-        android:layout_marginBottom="26dp"
-        android:id="@+id/contentMainUserProfileButton"
-        android:onClick="userProfileButtonOnClick"/>
+    <!--<Button-->
+        <!--android:text="Recipe"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="26dp"-->
+        <!--android:id="@+id/button4"-->
+        <!--android:layout_above="@+id/button3"-->
+        <!--android:layout_alignRight="@+id/button3"-->
+        <!--android:layout_alignEnd="@+id/button3"-->
+        <!--android:onClick="recipeButtonOnClick"/>-->
+
+    <!--<Button-->
+        <!--android:text="UserProfile"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/button4"-->
+        <!--android:layout_alignRight="@+id/button4"-->
+        <!--android:layout_alignEnd="@+id/button4"-->
+        <!--android:layout_marginBottom="26dp"-->
+        <!--android:id="@+id/contentMainUserProfileButton"-->
+        <!--android:onClick="userProfileButtonOnClick"/>-->
 </RelativeLayout>
