Added some elements to the Recipe page and some minor fixes.

--- a/app/src/main/res/layout/activity_pantry.xml
+++ b/app/src/main/res/layout/activity_pantry.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_ingredients"
     android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:text="@string/pantryTitle"
             android:layout_width="196dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
             android:textSize="36sp"
             android:layout_centerHorizontal="true" />
@@ -33,11 +34,42 @@
             android:id="@+id/pantrySearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="-3dp"/>
+
+        <TextView
+            android:text="Ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:textSize="24sp"/>
 
         <ListView
             android:id="@+id/pantryList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="383dp" />
+
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:id="@+id/floatingActionButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="301dp"
+        android:layout_marginStart="301dp"
+        android:layout_marginTop="494dp" />
 </RelativeLayout>
