--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -15,8 +15,27 @@
         android:text="@string/recipeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
         android:textSize="36sp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <SearchView
+        android:id="@+id/recipeSearchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/recipeTitleID"
+        android:layout_alignLeft="@+id/recipeTitleID"
+        android:layout_alignStart="@+id/recipeTitleID"
+        android:layout_marginLeft="-3dp"
+        android:layout_marginTop="10dp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/recipeSearchView" />
 </RelativeLayout>
