--- a/app/src/main/res/layout/activity_fitness_tracker.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker.xml
@@ -10,94 +10,44 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.alex.fitbytes.FitnessTracker">
-
     <TextView
         android:text="@string/fitness_tracker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="10sp"
         android:id="@+id/textView4"
         android:textSize="36sp" />
-
-    <LinearLayout
+    <TableLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20sp"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true">
-
-        <!--<TextView
-            android:text="Weekly Goal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView5"
-            android:textSize="20sp" />
-
-        <CheckBox
-            android:text="Weekly Goal 1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/weeklyGoal1" />-->
-        <Button android:id="@+id/addGoal"
-            android:text="Add a Goal"
+        <TableRow>
+            <Button android:id="@+id/addGoal"
+                android:text="@string/add_a_goal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Button android:id="@+id/toWeekly"
+            android:text="@string/go_to_weekly_goals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
+        </TableRow>
         <TextView
-            android:text="Daily Goals"
+            android:text="@string/daily_goals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
             android:id="@+id/textView6"
             android:textSize="20sp" />
-
-
-        <!--<CheckBox
-            android:text="@string/daily_goal_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dailyGoal1"
-            android:onClick="goalCheck"
-            android:textColorLink="?attr/colorAccent" />
-
-        <CheckBox
-            android:text="@string/daily_goal_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/dailyGoal2"
-            android:onClick="goalCheck"/>-->
         <ListView
             android:id="@+id/daily_goals"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
         </ListView>
-
-
-
-
-        <!--<TextView
-            android:text="Your Goals"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView7"
-            android:textSize="20sp" />
-
-        <CheckBox
-            android:text="Your Goal 1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox4"
-            android:textSize="14sp" />
-
-        <CheckBox
-            android:text="Your Goal 2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox5" />-->
-
-    </LinearLayout>
+    </TableLayout>
 </RelativeLayout>
