--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -37,5 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_below="@+id/recipeSearchView" />
+        android:layout_below="@+id/recipeSearchView"
+        android:id="@+id/recipe_list" />
 </RelativeLayout>
