--- a/app/src/main/res/layout/activity_pantry.xml
+++ b/app/src/main/res/layout/activity_pantry.xml
@@ -26,7 +26,7 @@
             android:layout_width="196dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="13dp"
             android:textSize="36sp"
             android:layout_centerHorizontal="true" />
 
@@ -35,41 +35,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="-3dp"/>
+            android:layout_marginLeft="-5dp"/>
 
         <TextView
             android:text="Ingredients"
-            android:layout_width="match_parent"
+            android:layout_width="172dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:textSize="24sp"/>
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="30sp"/>
 
         <ListView
             android:id="@+id/pantryList"
             android:layout_width="match_parent"
-            android:layout_height="383dp" />
+            android:layout_height="326dp" />
 
+        <Button
+            android:id="@+id/ingredientAddButtonID"
+            android:text="Add"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="275dp"
+            android:layout_marginStart="275dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="15dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:id="@+id/floatingActionButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="301dp"
-        android:layout_marginStart="301dp"
-        android:layout_marginTop="494dp" />
 </RelativeLayout>
