--- a/app/src/main/res/layout/activity_recipe_popup.xml
+++ b/app/src/main/res/layout/activity_recipe_popup.xml
@@ -38,7 +38,8 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.03" />
 
         <TableRow
             android:layout_width="match_parent"
