--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,12 +16,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FitBytes"
+        android:text="Welcome, "
         android:textSize="50sp"
         android:id="@+id/textView8" />
 
     <TextView
-        android:text="Use menu button in top right to navigate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView7"
