--- a/app/src/main/res/layout/activity_fitness_tracker.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.alex.fitbytes.FitnessTracker">
+    tools:context="com.example.alex.fitbytes.fitnesstracker.FitnessTracker">
     <TextView
         android:text="@string/fitness_tracker"
         android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
         android:id="@+id/textView4"
-        android:textSize="36sp" />
+        android:textSize="28sp" />
     <TableLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -31,20 +31,20 @@
                 android:text="@string/add_a_goal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <Button android:id="@+id/toWeekly"
+<!--            <Button android:id="@+id/toWeekly"
             android:text="@string/go_to_weekly_goals"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
         </TableRow>
         <TextView
-            android:text="@string/daily_goals"
+            android:text="Current Goals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
             android:id="@+id/textView6"
             android:textSize="20sp" />
         <ListView
-            android:id="@+id/daily_goals"
+            android:id="@+id/current_goals"
             android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
