--- a/app/src/main/res/layout/activity_fitness_tracker.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker.xml
@@ -9,32 +9,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.alex.fitbytes.fitnesstracker.FitnessTracker">
-    <TextView
-        android:text="@string/fitness_tracker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10sp"
-        android:id="@+id/textView4"
-        android:textSize="28sp" />
+    tools:context="com.example.alex.fitbytes.FitnessTracker">
     <TableLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20sp"
-        android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true">
-        <TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <Button android:id="@+id/addGoal"
                 android:text="@string/add_a_goal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-<!--            <Button android:id="@+id/toWeekly"
-            android:text="@string/go_to_weekly_goals"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />-->
         </TableRow>
         <TextView
             android:text="Current Goals"
@@ -42,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
             android:id="@+id/textView6"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
         <ListView
             android:id="@+id/current_goals"
-            android:textSize="12sp"
+            android:textSize="8sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </ListView>
