--- a/app/src/main/res/layout/goal_completion_dialog.xml
+++ b/app/src/main/res/layout/goal_completion_dialog.xml
@@ -3,23 +3,104 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/goals"
+    <!--<TabHost
+        android:id="@+id/tab_host"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="12sp" />
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-    <TableRow
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/details"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/options"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>-->
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Description"
+                android:ems="10"
+                android:id="@+id/goal_completion_goal_description_description"
+                android:textSize="16sp"
+                android:paddingLeft="16sp" android:paddingTop="16sp" android:paddingBottom="4sp"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="No Description Found"
+            android:ems="10"
+            android:id="@+id/goal_completion_goal_description"
+                android:textSize="16sp"
+                android:paddingLeft="40sp" android:paddingTop="4sp" android:paddingBottom="4sp"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Due Date"
+                android:ems="10"
+                android:id="@+id/goal_completion_goal_deadline_deadline"
+                android:textSize="16sp"
+                android:paddingLeft="16sp" android:paddingTop="16sp" android:paddingBottom="4sp"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="No Deadline"
+                android:ems="10"
+                android:id="@+id/goal_completion_goal_deadline"
+                android:textSize="16sp"
+                android:paddingLeft="40sp" android:paddingTop="4sp" android:paddingBottom="16sp"/>
+        </TableRow>
+        <TableRow>
+            <Button
+                android:text="Go Back"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/goal_go_back"
+                android:layout_weight="1" />
+            <Button
+                android:text="Mark As Complete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/goal_mark_as_complete"
+                android:layout_weight="2" />
+        </TableRow>
+    </TableLayout>
 
-        <Button
-            android:text="Mark As Complete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/goal_mark_as_complete"
-            android:layout_weight="1" />
-
-    </TableRow>
 </LinearLayout>
